clang_tablegen(Checkers.inc -gen-clang-sa-checkers
  -I ${CMAKE_CURRENT_SOURCE_DIR}/../../../include
  SOURCE Checkers.td
  TARGET ClangSACheckers)

set(LLVM_LINK_COMPONENTS
  Support
  )

add_clang_library(clangStaticAnalyzerCheckers
  AnalyzerStatsChecker.cpp
  AllocationDiagnostics.cpp
  ArrayBoundChecker.cpp
  ArrayBoundCheckerV2.cpp
  ASaPAnnotationScheme.cpp
  ASaPSymbolTable.cpp
  ASaPType.cpp
  ASaPUtil.cpp
  BasicObjCFoundationChecks.cpp
  BoolAssignmentChecker.cpp
  BuiltinFunctionChecker.cpp
  CStringChecker.cpp
  CStringSyntaxChecker.cpp
  CallAndMessageChecker.cpp
  CastSizeChecker.cpp
  CastToStructChecker.cpp
  CheckObjCDealloc.cpp
  CheckObjCInstMethSignature.cpp
  CheckSecuritySyntaxOnly.cpp
  CheckSizeofPointer.cpp
  CheckerDocumentation.cpp
  ChrootChecker.cpp
  ClangCheckers.cpp
  CollectRegionNamesAndParameters.cpp
  DeadStoresChecker.cpp
  DebugCheckers.cpp
  DereferenceChecker.cpp
  DetectTBBPArallelism.cpp
  DirectIvarAssignment.cpp
  DivZeroChecker.cpp
  DynamicTypePropagation.cpp
  Effect.cpp
  EffectSummaryNormalizer.cpp
  EffectConstraintGeneration.cpp
  ExprInspectionChecker.cpp
  FixedAddressChecker.cpp
  GenericTaintChecker.cpp
  IdenticalExprChecker.cpp
  IvarInvalidationChecker.cpp
  LLVMConventionsChecker.cpp
  MacOSKeychainAPIChecker.cpp
  MacOSXAPIChecker.cpp
  MallocChecker.cpp
  MallocOverflowSecurityChecker.cpp
  MallocSizeofChecker.cpp
  NSAutoreleasePoolChecker.cpp
  NSErrorChecker.cpp
  NoReturnFunctionChecker.cpp
  NonInterferenceChecker.cpp
  NonNullParamChecker.cpp
  ObjCAtSyncChecker.cpp
  ObjCContainersASTChecker.cpp
  ObjCContainersChecker.cpp
  ObjCMissingSuperCallChecker.cpp
  ObjCSelfInitChecker.cpp
  ObjCUnusedIVarsChecker.cpp
  PointerArithChecker.cpp
  PointerSubChecker.cpp
  PthreadLockChecker.cpp
  RetainCountChecker.cpp
  ReturnPointerRangeChecker.cpp
  ReturnUndefChecker.cpp
  Rpl.cpp
  SafeParallelismChecker.cpp
  SemanticChecker.cpp
  SimpleStreamChecker.cpp
  SpecificNIChecker.cpp
  StackAddrEscapeChecker.cpp
  StaticVariableAccessChecker.cpp
  StreamChecker.cpp
  Substitution.cpp
  TaintTesterChecker.cpp
  TraversalChecker.cpp
  TypeChecker.cpp
  UndefBranchChecker.cpp
  UndefCapturedBlockVarChecker.cpp
  UndefResultChecker.cpp
  UndefinedArraySubscriptChecker.cpp
  UndefinedAssignmentChecker.cpp
  UnixAPIChecker.cpp
  UnreachableCodeChecker.cpp
  VLASizeChecker.cpp
  VirtualCallChecker.cpp
  )

add_dependencies(clangStaticAnalyzerCheckers
  ClangAttrClasses
  ClangAttrList
  ClangCommentNodes
  ClangDeclNodes
  ClangDiagnosticCommon
  ClangStmtNodes
  ClangSACheckers
  )

target_link_libraries(clangStaticAnalyzerCheckers
  clangAST
  clangAnalysis
  clangBasic
  clangStaticAnalyzerCore
  )
